# streamlit-bigquery-dashboard

./: .dockerignore  .env.example  .gitignore  .mailmap  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
docs/: features.md  user_guide.md
src/: config.py
src/analytics/: alerts.py  anomaly_detection.py  benchmarks.py  data_lineage.py  data_quality.py  forecasting.py  period_comparison.py  scheduler.py
src/auth/: authenticator.py
src/collaboration/: annotations.py  comments.py
src/components/: charts.py  date_picker.py  filters.py  metrics_cards.py  sidebar.py  sql_editor.py  tables.py  theme.py
src/core/: bigquery_client.py  cache_manager.py  csv_processor.py  lazy_loader.py  performance.py  query_builder.py  query_history.py  saved_queries.py
src/exporters/: csv_exporter.py  excel_exporter.py  pdf_exporter.py
src/pages/: cohort.py  funnel.py  kpis.py  retention.py  segmentation.py  trends.py
tests/: test_components.py  test_e2e.py
