[project]
name = "painel-educacao"
version = "2.0.0"
description = "Dashboard Painel Educação Básica"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Portfolio Project"}
]

dependencies = [
    "streamlit>=1.28.0",
    "google-cloud-bigquery>=3.12.0",
    "google-auth>=2.23.0",
    "pandas>=2.1.0",
    "plotly>=5.18.0",
    "xlsxwriter>=3.1.0",
    "numpy>=1.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
pdf = [
    "reportlab>=4.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
